@@ -24,6 +24,7 @@ import org.elasticsearch.gradle.test.RestIntegTestTask
 import java.nio.file.Files
 import java.nio.file.Path
 import java.nio.file.Paths
+
 apply plugin: 'elasticsearch.test.fixtures'
 
 esplugin {
@@ -91,9 +92,6 @@ for (String fixtureName : ['hdfsFixture', 'haHdfsFixture', 'secureHdfsFixture', 
     // If it's a secure fixture, then depend on Kerberos Fixture and principals + add the krb5conf to the JVM options
     if (fixtureName.equals('secureHdfsFixture') || fixtureName.equals('secureHaHdfsFixture')) {
       miniHDFSArgs.add("-Djava.security.krb5.conf=${project(':test:fixtures:krb5kdc-fixture').ext.krb5Conf("hdfs")}");
-      if (project.runtimeJavaVersion == JavaVersion.VERSION_1_9) {
-        miniHDFSArgs.add('--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED')
-      }
     }
 
     // If it's an HA fixture, set a nameservice to use in the JVM options
@@ -140,9 +138,6 @@ project.afterEvaluate {
               "${project(':test:fixtures:krb5kdc-fixture').ext.krb5Keytabs("hdfs", "elasticsearch.keytab")}"
       )
       jvmArgs = jvmArgs + " " + "-Djava.security.krb5.conf=${krb5conf}"
-      if (project.runtimeJavaVersion == JavaVersion.VERSION_1_9) {
-        jvmArgs = jvmArgs + " " + '--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED'
-      }
 
       // If it's the HA + Secure tests then also set the Kerberos settings for the integration test JVM since we'll
       // need to auth to HDFS to trigger namenode failovers.
@@ -150,10 +145,7 @@ project.afterEvaluate {
         Task restIntegTestTaskRunner = project.tasks.getByName("${integTestTaskName}Runner")
         restIntegTestTaskRunner.systemProperty "test.krb5.principal.es", "elasticsearch@${realm}"
         restIntegTestTaskRunner.systemProperty "test.krb5.principal.hdfs", "hdfs/hdfs.build.elastic.co@${realm}"
-        restIntegTestTaskRunner.jvmArg "-Djava.security.krb5.conf=${krb5conf}"
-        if (project.runtimeJavaVersion == JavaVersion.VERSION_1_9) {
-          restIntegTestTaskRunner.jvmArg '--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED'
-        }
+        restIntegTestTaskRunner.jvmArgs "-Djava.security.krb5.conf=${krb5conf}"
         restIntegTestTaskRunner.systemProperty (
                 "test.krb5.keytab.hdfs",
                 project(':test:fixtures:krb5kdc-fixture').ext.krb5Keytabs("hdfs","hdfs_hdfs.build.elastic.co.keytab")
@@ -221,7 +213,7 @@ if (fixtureSupported) {
   integTestRunner.systemProperty 'tests.rest.suite', 'hdfs_repository'
 
   // Only include the HA integration tests for the HA test task
-  integTestHaRunner.patternSet.setIncludes(['**/Ha*TestSuiteIT.class'])
+  integTestHaRunner.setIncludes(['**/Ha*TestSuiteIT.class'])
 } else {
   if (legalPath) {
     logger.warn("hdfsFixture unsupported, please set HADOOP_HOME and put HADOOP_HOME\\bin in PATH")
@@ -252,7 +244,7 @@ integTestSecureRunner.systemProperty 'tests.rest.suite', 'secure_hdfs_repository
 // Ignore HA integration Tests. They are included below as part of integTestSecureHa test runner.
 integTestSecureRunner.exclude('**/Ha*TestSuiteIT.class')
 // Only include the HA integration tests for the HA test task
-integTestSecureHaRunner.patternSet.setIncludes(['**/Ha*TestSuiteIT.class'])
+integTestSecureHaRunner.setIncludes(['**/Ha*TestSuiteIT.class'])
 
 thirdPartyAudit {
     ignoreMissingClasses()
